Added messages to the message dashboard

--- a/message-dashboard/index.html
+++ b/message-dashboard/index.html
@@ -45,8 +45,8 @@
                 </li>
             </ul>
         </div>
-        <div class="col-sm-8 col-md-8 col-lg-10 marginTop15">
-            <div class="row shadowBottom">
+        <div class="col-sm-8 col-md-8 col-lg-10 flexColumn">
+            <div class="row paddingTop15 backgroundWhite shadowBottom zIndex2">
                 <div class="col-6 col-sm-6">
                     <div class="searchBox">
                         <i class="fa fa-search"></i>
@@ -59,7 +59,7 @@
                             <div class="smallNotification">3</div>
                             <i class="fa fa-bell"></i>
                         </div>
-                        <div class="topNotification  pull-left">
+                        <div class="topNotification pull-left">
                             <div class="smallNotification">3</div>
                             <i class="fa fa-comment"></i>
                         </div>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row shadowBottom marginTop25">
+            <div class="row paddingTop25 backgroundWhite shadowBottom zIndex1">
                 <div class="col-6 col-sm-6">
                     <h5>All Messages <span class="textAccent pointer">(100)</span>
                         <i class="fa fa-chevron-down textAccent pointer"></i></h5>
@@ -80,11 +80,145 @@
                     </button>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-6">
-                    messages
+            <div class="row flexRow">
+                <div class="col-sm-6 messagesList backgroundMidGrey">
+                    <div class="row messageBar unread">
+                        <div class="col-4 noPadding">
+                            <img src="lady1.jpg" class="avatarImage--Large pointer"/>
+                            <div class="pull-right">
+                                <p class="titleText">
+                                    Cody Benson
+                                </p>
+                                <div>
+                                    <div class="circleIndicator redBorder pull-left">
+                                    </div>
+                                    <span class="metadata">Not Replied</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 noPadding">
+                            <p class="titleText">
+                                Lorem ipsum dolor sit amet
+                            </p>
+                            <p class="messageText">
+                                Nullam convallis turpis vitae turpis...
+                            </p>
+                        </div>
+                        <div class="col-2 noPadding">
+                            <p class="verticalMenu pull-right"></p>
+                            <p class="timeText">3:33 PM</p>
+                        </div>
+                    </div>
+                    <div class="row messageBar">
+                        <div class="col-4 noPadding">
+                            <img src="lady1.jpg" class="avatarImage--Large pointer"/>
+                            <div class="pull-right">
+                                <p class="titleText">
+                                    Cody Benson
+                                </p>
+                                <div>
+                                    <div class="circleIndicator yellowBorder pull-left">
+                                    </div>
+                                    <span class="metadata">Contacted</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 noPadding">
+                            <p class="titleText">
+                                Lorem ipsum dolor sit amet
+                            </p>
+                            <p class="messageText">
+                                Nullam convallis turpis vitae turpis...
+                            </p>
+                        </div>
+                        <div class="col-2 noPadding">
+                            <p class="verticalMenu pull-right"></p>
+                            <p class="timeText">3:33 PM</p>
+                        </div>
+                    </div>
+                    <div class="row messageBar active">
+                        <div class="col-4 noPadding">
+                            <img src="lady1.jpg" class="avatarImage--Large pointer"/>
+                            <div class="pull-right">
+                                <p class="titleText">
+                                    Cody Benson
+                                </p>
+                                <div>
+                                    <div class="circleIndicator greenBorder pull-left">
+                                    </div>
+                                    <span class="metadata">Replied</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 noPadding">
+                            <p class="titleText">
+                                Lorem ipsum dolor sit amet
+                            </p>
+                            <p class="messageText">
+                                Nullam convallis turpis vitae turpis...
+                            </p>
+                        </div>
+                        <div class="col-2 noPadding">
+                            <p class="verticalMenu pull-right"></p>
+                            <p class="timeText">3:33 PM</p>
+                        </div>
+                    </div>
+                    <div class="row messageBar">
+                        <div class="col-4 noPadding">
+                            <img src="lady1.jpg" class="avatarImage--Large pointer"/>
+                            <div class="pull-right">
+                                <p class="titleText">
+                                    Cody Benson
+                                </p>
+                                <div>
+                                    <div class="circleIndicator greenBorder pull-left">
+                                    </div>
+                                    <span class="metadata">Replied</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 noPadding">
+                            <p class="titleText">
+                                Lorem ipsum dolor sit amet
+                            </p>
+                            <p class="messageText">
+                                Nullam convallis turpis vitae turpis...
+                            </p>
+                        </div>
+                        <div class="col-2 noPadding">
+                            <p class="verticalMenu pull-right"></p>
+                            <p class="timeText">3:33 PM</p>
+                        </div>
+                    </div>
+                    <div class="row messageBar unread">
+                        <div class="col-4 noPadding">
+                            <img src="lady1.jpg" class="avatarImage--Large pointer"/>
+                            <div class="pull-right">
+                                <p class="titleText">
+                                    Cody Benson
+                                </p>
+                                <div>
+                                    <div class="circleIndicator redBorder pull-left">
+                                    </div>
+                                    <span class="metadata">Not Replied</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 noPadding">
+                            <p class="titleText">
+                                Lorem ipsum dolor sit amet
+                            </p>
+                            <p class="messageText">
+                                Nullam convallis turpis vitae turpis...
+                            </p>
+                        </div>
+                        <div class="col-2 noPadding">
+                            <p class="verticalMenu pull-right"></p>
+                            <p class="timeText">3:33 PM</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 singleMessage backgroundLightGrey">
                     onemessage
                 </div>
             </div>
