testing out OG preview

--- a/message-dashboard/index.html
+++ b/message-dashboard/index.html
@@ -12,6 +12,11 @@
     <meta name="twitter:description" content="An inbox dashboard prototype design for messaging">
     <meta name="twitter:image" content="http://ryan-musselwhite.com/prototype-designs/message-dashboard/twitter.png">
 
+    <meta property="og:title" content="An inbox dashboard prototype design" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://ryan-musselwhite.com/prototype-designs/message-dashboard" />
+    <meta property="og:image" content="http://ryan-musselwhite.com/prototype-designs/message-dashboard/twitter.png" />
+
     <title>Inbox dashboard design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
