testing out OG preview

--- a/message-dashboard/index.html
+++ b/message-dashboard/index.html
@@ -12,7 +12,8 @@
     <meta name="twitter:description" content="An inbox dashboard prototype design for messaging">
     <meta name="twitter:image" content="http://ryan-musselwhite.com/prototype-designs/message-dashboard/twitter.png">
 
-    <meta property="og:title" content="An inbox dashboard prototype design" />
+    <meta property="og:title" content="Inbox dashboard design" />
+    <meta property="og:description" content="An inbox dashboard prototype design" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://ryan-musselwhite.com/prototype-designs/message-dashboard" />
     <meta property="og:image" content="http://ryan-musselwhite.com/prototype-designs/message-dashboard/twitter.png" />
