Added open graph for older prototype

--- a/stock-graph/index.html
+++ b/stock-graph/index.html
@@ -12,6 +12,12 @@
     <meta name="twitter:description" content="A prototype design relating to a stock portfolio">
     <meta name="twitter:image" content="http://ryan-musselwhite.com/prototype-designs/stock-graph/twitter.png">
 
+    <meta property="og:title" content="Stock Graph Prototype Design"/>
+    <meta property="og:description" content="A stock graph prototype design"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://ryan-musselwhite.com/prototype-designs/stock-graph"/>
+    <meta property="og:image" content="http://ryan-musselwhite.com/prototype-designs/stock-graph/twitter.png"/>
+
     <title>Stock Graph Prototype Design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
