--- a/crypto/index.html
+++ b/crypto/index.html
@@ -44,7 +44,7 @@
 
 <div class="container-fluid">
     <div class="row marginTop20">
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-3">
             <div class="card greenBar card--minHeight">
                 <div class="card-block" id="highestHour">
                     <h4 class="card-title">Top 1H</h4>
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-3">
             <div class="card greenBar card--minHeight">
                 <div class="card-block" id="highestDay">
                     <h4 class="card-title">Top 24H</h4>
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-3">
             <div class="card redBar card--minHeight">
                 <div class="card-block" id="lowestHour">
                     <h4 class="card-title">Lowest 1H</h4>
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-xl-3">
             <div class="card redBar card--minHeight">
                 <div class="card-block" id="lowestDay">
                     <h4 class="card-title">Lowest 24H</h4>
@@ -85,16 +85,45 @@
                 <table class="table table-responsive table-striped">
                     <thead class="blueBg">
                     <tr>
-                        <th>ID</th>
-                        <th>Symbol</th>
+                        <th class="hidden-md-down">ID</th>
+                        <th class="hidden-md-down">Symbol</th>
                         <th>Name</th>
                         <th>Current Price $</th>
                         <th>% Change (H)</th>
                         <th>% Change (D)</th>
-                        <th>% Change (W)</th>
+                        <th class="hidden-md-down">% Change (W)</th>
                     </tr>
                     </thead>
                     <tbody id="watchedCurrencies">
+                    <div class="text-center loader">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                        ' +
+                        ' xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="24px" height="30px"
+                        viewBox="0 0 24 30"' +
+                        ' style="enable-background:new 0 0 50 50;" xml:space="preserve">
+                        <rect x="0" y="0" width="4" height="10" fill="#2196f3"
+                        ' +
+                        ' transform="translate(0 3.41582e-7)">
+                        <animateTransform attributeType="xml" attributeName="transform"
+                        ' +
+                        'type="translate" values="0 0; 0 20; 0 0" begin="0" dur="0.6s"
+                        repeatCount="indefinite"></animateTransform>' +
+                        '</rect>
+                        <rect x="10" y="0" width="4" height="10" fill="#2196f3" transform="translate(0 13.3333)">' +
+                            '
+                            <animateTransform attributeType="xml" attributeName="transform" type="translate"
+                            ' +
+                            'values="0 0; 0 20; 0 0" begin="0.2s" dur="0.6s"
+                            repeatCount="indefinite"></animateTransform></rect>
+                        ' +
+                        '
+                        <rect x="20" y="0" width="4" height="10" fill="#2196f3" transform="translate(0 13.3333)">' +
+                            '
+                            <animateTransform attributeType="xml" attributeName="transform" type="translate"
+                                              values="0 0; 0 20; 0 0"
+                            ' +
+                            ' begin="0.4s" dur="0.6s" repeatCount="indefinite"></animateTransform></rect>
+                        </svg></div>
                     </tbody>
                 </table>
             </div>
