Fixing links / adding favicon and twitter for trips dashboard

--- a/message-dashboard/index.html
+++ b/message-dashboard/index.html
@@ -10,13 +10,13 @@
     <meta name="twitter:site" content="@ryan.musselwhite">
     <meta name="twitter:title" content="An inbox dashboard prototype design">
     <meta name="twitter:description" content="An inbox dashboard prototype design for messaging">
-    <meta name="twitter:image" content="http://ryan-musselwhite.com/prototype-designs/message-dashboard/twitter.png">
+    <meta name="twitter:image" content="https://ryanmusselwhite.com/prototype-designs/message-dashboard/twitter.png">
 
     <meta property="og:title" content="Inbox dashboard design" />
     <meta property="og:description" content="An inbox dashboard prototype design" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://ryan-musselwhite.com/prototype-designs/message-dashboard" />
-    <meta property="og:image" content="http://ryan-musselwhite.com/prototype-designs/message-dashboard/twitter.png" />
+    <meta property="og:url" content="https://ryanmusselwhite.com/prototype-designs/message-dashboard"/>
+    <meta property="og:image" content="https://ryanmusselwhite.com/prototype-designs/message-dashboard/twitter.png"/>
 
     <title>Inbox dashboard design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
