--- a/stock-graph/index.html
+++ b/stock-graph/index.html
@@ -10,13 +10,13 @@
     <meta name="twitter:site" content="@ryan.musselwhite">
     <meta name="twitter:title" content="A stock graph prototype design">
     <meta name="twitter:description" content="A prototype design relating to a stock portfolio">
-    <meta name="twitter:image" content="http://ryan-musselwhite.com/prototype-designs/stock-graph/twitter.png">
+    <meta name="twitter:image" content="https://ryanmusselwhite.com/prototype-designs/stock-graph/twitter.png">
 
     <meta property="og:title" content="Stock Graph Prototype Design"/>
     <meta property="og:description" content="A stock graph prototype design"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://ryan-musselwhite.com/prototype-designs/stock-graph"/>
-    <meta property="og:image" content="http://ryan-musselwhite.com/prototype-designs/stock-graph/twitter.png"/>
+    <meta property="og:url" content="https://ryanmusselwhite.com/prototype-designs/stock-graph"/>
+    <meta property="og:image" content="https://ryanmusselwhite.com/prototype-designs/stock-graph/twitter.png"/>
 
     <title>Stock Graph Prototype Design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
@@ -82,7 +82,7 @@
                     <div class="row pointer" id="profile">
                         <div class="col-5 col-sm-4 col-md-5 col-lg-4">
                             <img class="img-fluid borderRadius pull-right"
-                                 src="http://ryan-musselwhite.com/reus/themes/purple/images/team/profile3.jpg">
+                                 src="https://ryanmusselwhite.com/reus/themes/purple/images/team/profile3.jpg">
                         </div>
                         <div class="col-7 col-sm-8 col-md-7 col-lg-7 noPadding">
                             <p class="paddingtop15">
