--- a/trips-dashboard/index.html
+++ b/trips-dashboard/index.html
@@ -10,13 +10,13 @@
     <meta name="twitter:site" content="@ryan.musselwhite">
     <meta name="twitter:title" content="Trips dashboard design">
     <meta name="twitter:description" content="A trips dashboard design">
-    <meta name="twitter:image" content="http://ryan-musselwhite.com/prototype-designs/trips-dashboard/twitter.png">
+    <meta name="twitter:image" content="https://ryanmusselwhite.com/prototype-designs/trips-dashboard/twitter.png">
 
     <meta property="og:title" content="Trips dashboard design"/>
     <meta property="og:description" content="A trips dashboard design"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://ryan-musselwhite.com/prototype-designs/trips-dashboard"/>
-    <meta property="og:image" content="http://ryan-musselwhite.com/prototype-designs/trips-dashboard/twitter.png"/>
+    <meta property="og:url" content="https://ryanmusselwhite.com/prototype-designs/trips-dashboard"/>
+    <meta property="og:image" content="https://ryanmusselwhite.com/prototype-designs/trips-dashboard/twitter.png"/>
 
     <title>Trips dashboard design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="../libraries/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="favicon-line-chart.ico"/>
+    <link rel="icon" href="favicon-paper-plane-o.ico"/>
 </head>
 <body>
 <div class="container-fluid">
